# webhdfs-cpp

./: CMakeLists.txt  LICENSE.md  README.md
demo-app/: main.cpp  utils.h
lib/include/: WebHdfsClient.h
lib/src/: WebHdfsClient.cpp
